--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: live_document_scanner
 description: "A Flutter plugin for scanning documents using camera. It provides a live preview of the document being scanned."
 version: 0.0.2
 homepage: https://rprandt.com/
+repository: https://github.com/prandt/live_document_scanner
 
 environment:
   sdk: ^3.6.0
